--- a/sass/_front_page.scss
+++ b/sass/_front_page.scss
@@ -156,7 +156,7 @@
     width: 480px;
   }
 
-  .animation { z-index: 2; }
+  .animation  { z-index: 2; }
   .foreground { z-index: 3; }
 }
 
@@ -345,6 +345,10 @@
 
 .animation-mask{
   z-index: 1;
+}
+
+#tv .generated-image {
+  z-index: 2;
 }
 
 // share
